tests/invalid/runtime/glyph_unary.pts
function main() : void {
    glyph g = "A"[0];
    glyph x = ~g;
}
